# FinAssist

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
configs/: dialogue.yaml  evaluation.yaml  models.yaml  training.yaml
notebooks/: course_report.ipynb
reports/: eval_results_1776415750.csv  eval_results_1776416427.csv  eval_results_1776417437.csv  eval_results_1776421111.csv
scripts/: download_model.py  generate_report_assets.py  merge_lora.py  train_lora.py
src/app/: chat_ui.py  streamlit_app.py  ui_styles.py
src/app/components/: charts.py
src/app/pages/: 1_Chat.py  2_Benchmarks.py  3_Data_and_Exports.py
src/assignment_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/data_collection/: __init__.py  consent.py  dataset_builder.py  export_json.py
src/dialogue/: __init__.py  guided_flow.py  slot_tracking.py  slots.py  state_machine.py  validators.py
src/evaluation/: __init__.py  csv_output.py  human_rubric.md  metrics.py  run_eval.py
src/evaluation/fixtures/: example_prompts.json  gold_outputs_notes.md
src/finassist/: __init__.py  calculation_echo.py  debt_calculations.py  justification.py  schemas.py
src/llm/: backend_base.py  hf_local.py  mock_backend.py
src/llm/prompts/: dialogue_collect.jinja2  recommend.jinja2  system_finance.txt
src/llm/prompts/techniques/: cot.txt  few_shot.txt  (+1 more)
src/utils/: config_loader.py  device.py  logging_config.py
tests/: test_calculation_echo.py  test_debt_calculations.py  test_dialogue_state.py  test_prompts.py  test_schema_validation.py
